nodejs/versioned_docs/version-1.11.0/api/class-androiddevice.mdx
---
id: class-androiddevice
title: "AndroidDevice"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[AndroidDevice] represents a connected device, either real hardware or emulated. Devices can be obtained using [android.devices()](./api/class-android.mdx#androiddevices).


- [androidDevice.on('webview')](./api/class-androiddevice.mdx#androiddeviceonwebview)
- [androidDevice.close()](./api/class-androiddevice.mdx#androiddeviceclose)
- [androidDevice.drag(selector, dest[, options])](./api/class-androiddevice.mdx#androiddevicedragselector-dest-options)
- [androidDevice.fill(selector, text[, options])](./api/class-androiddevice.mdx#androiddevicefillselector-text-options)
- [androidDevice.fling(selector, direction[, options])](./api/class-androiddevice.mdx#androiddeviceflingselector-direction-options)
- [androidDevice.info(selector)](./api/class-androiddevice.mdx#androiddeviceinfoselector)
- [androidDevice.installApk(file[, options])](./api/class-androiddevice.mdx#androiddeviceinstallapkfile-options)
- [androidDevice.launchBrowser([options])](./api/class-androiddevice.mdx#androiddevicelaunchbrowseroptions)
- [androidDevice.longTap(selector[, options])](./api/class-androiddevice.mdx#androiddevicelongtapselector-options)
- [androidDevice.model()](./api/class-androiddevice.mdx#androiddevicemodel)
- [androidDevice.open(command)](./api/class-androiddevice.mdx#androiddeviceopencommand)
- [androidDevice.pinchClose(selector, percent[, options])](./api/class-androiddevice.mdx#androiddevicepinchcloseselector-percent-options)
- [androidDevice.pinchOpen(selector, percent[, options])](./api/class-androiddevice.mdx#androiddevicepinchopenselector-percent-options)
- [androidDevice.press(selector, key[, options])](./api/class-androiddevice.mdx#androiddevicepressselector-key-options)
- [androidDevice.push(file, path[, options])](./api/class-androiddevice.mdx#androiddevicepushfile-path-options)
- [androidDevice.screenshot([options])](./api/class-androiddevice.mdx#androiddevicescreenshotoptions)
- [androidDevice.scroll(selector, direction, percent[, options])](./api/class-androiddevice.mdx#androiddevicescrollselector-direction-percent-options)
- [androidDevice.serial()](./api/class-androiddevice.mdx#androiddeviceserial)
- [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout)
- [androidDevice.shell(command)](./api/class-androiddevice.mdx#androiddeviceshellcommand)
- [androidDevice.swipe(selector, direction, percent[, options])](./api/class-androiddevice.mdx#androiddeviceswipeselector-direction-percent-options)
- [androidDevice.tap(selector[, options])](./api/class-androiddevice.mdx#androiddevicetapselector-options)
- [androidDevice.wait(selector[, options])](./api/class-androiddevice.mdx#androiddevicewaitselector-options)
- [androidDevice.waitForEvent(event[, optionsOrPredicate])](./api/class-androiddevice.mdx#androiddevicewaitforeventevent-optionsorpredicate)
- [androidDevice.webView(selector[, options])](./api/class-androiddevice.mdx#androiddevicewebviewselector-options)
- [androidDevice.webViews()](./api/class-androiddevice.mdx#androiddevicewebviews)
- [androidDevice.input](./api/class-androiddevice.mdx#androiddeviceinput)

## androidDevice.on('webview')
- type: <[AndroidWebView]>

Emitted when a new WebView instance is detected.

## androidDevice.close()
- returns: <[Promise]<[void]>>

Disconnects from the device.

## androidDevice.drag(selector, dest[, options])
- `selector` <[AndroidSelector]> Selector to drag.
- `dest` <[Object]> Point to drag to.
  - `x` <[number]>
  - `y` <[number]>
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the drag in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Drags the widget defined by `selector` towards `dest` point.

## androidDevice.fill(selector, text[, options])
- `selector` <[AndroidSelector]> Selector to fill.
- `text` <[string]> Text to be filled in the input box.
- `options` <[Object]>
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Fills the specific `selector` input box with `text`.

## androidDevice.fling(selector, direction[, options])
- `selector` <[AndroidSelector]> Selector to fling.
- `direction` <"down"|"up"|"left"|"right"> Fling direction.
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the fling in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Flings the widget defined by `selector` in  the specified `direction`.

## androidDevice.info(selector)
- `selector` <[AndroidSelector]> Selector to return information about.
- returns: <[Promise]<[AndroidElementInfo]>>

Returns information about a widget defined by `selector`.

## androidDevice.installApk(file[, options])
- `file` <[string]|[Buffer]> Either a path to the apk file, or apk file content.
- `options` <[Object]>
  - `args` <[Array]<[string]>> Optional arguments to pass to the `shell:cmd package install` call. Defaults to `-r -t -S`.
- returns: <[Promise]<[void]>>

Installs an apk on the device.

## androidDevice.launchBrowser([options])
- `options` <[Object]>
  - `acceptDownloads` <[boolean]> Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
  - `bypassCSP` <[boolean]> Toggles bypassing page's Content-Security-Policy.
  - `colorScheme` <"light"|"dark"|"no-preference"> Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#pageemulatemediaoptions) for more details. Defaults to `'light'`.
  - `command` <[string]> Optional package name to launch instead of default Chrome for Android.
  - `deviceScaleFactor` <[number]> Specify device scale factor (can be thought of as dpr). Defaults to `1`.
  - `extraHTTPHeaders` <[Object]<[string], [string]>> An object containing additional HTTP headers to be sent with every request. All header values must be strings.
  - `geolocation` <[Object]>
    - `latitude` <[number]> Latitude between -90 and 90.
    - `longitude` <[number]> Longitude between -180 and 180.
    - `accuracy` <[number]> Non-negative accuracy value. Defaults to `0`.
  - `hasTouch` <[boolean]> Specifies if viewport supports touch events. Defaults to false.
  - `httpCredentials` <[Object]> Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
    - `username` <[string]>
    - `password` <[string]>
  - `ignoreHTTPSErrors` <[boolean]> Whether to ignore HTTPS errors during navigation. Defaults to `false`.
  - `isMobile` <[boolean]> Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
  - `javaScriptEnabled` <[boolean]> Whether or not to enable JavaScript in the context. Defaults to `true`.
  - `locale` <[string]> Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
  - `logger` <[Logger]> Logger sink for Playwright logging.
  - `offline` <[boolean]> Whether to emulate network being offline. Defaults to `false`.
  - `permissions` <[Array]<[string]>> A list of permissions to grant to all pages in this context. See [browserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browsercontextgrantpermissionspermissions-options) for more details.
  - `recordHar` <[Object]> Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into `recordHar.path` file. If not specified, the HAR is not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browsercontextclose) for the HAR to be saved.
    - `omitContent` <[boolean]> Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
    - `path` <[string]> Path on the filesystem to write the HAR file to.
  - `recordVideo` <[Object]> Enables video recording for all pages into `recordVideo.dir` directory. If not specified videos are not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browsercontextclose) for videos to be saved.
    - `dir` <[string]> Path to the directory to put videos into.
    - `size` <[Object]> Optional dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
      - `width` <[number]> Video frame width.
      - `height` <[number]> Video frame height.
  - `screen` <[Object]> Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
    - `width` <[number]> page width in pixels.
    - `height` <[number]> page height in pixels.
  - `timezoneId` <[string]> Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
  - `userAgent` <[string]> Specific user agent to use in this context.
  - `videoSize` <[Object]> **DEPRECATED** Use `recordVideo` instead.
    - `width` <[number]> Video frame width.
    - `height` <[number]> Video frame height.
  - `videosPath` <[string]> **DEPRECATED** Use `recordVideo` instead.
  - `viewport` <[null]|[Object]> Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.
    - `width` <[number]> page width in pixels.
    - `height` <[number]> page height in pixels.
- returns: <[Promise]<[BrowserContext]>>

Launches Chrome browser on the device, and returns its persistent context.

## androidDevice.longTap(selector[, options])
- `selector` <[AndroidSelector]> Selector to tap on.
- `options` <[Object]>
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Performs a long tap on the widget defined by `selector`.

## androidDevice.model()
- returns: <[string]>

Device model.

## androidDevice.open(command)
- `command` <[string]>
- returns: <[Promise]<[AndroidSocket]>>

Launches a process in the shell on the device and returns a socket to communicate with the launched process.

## androidDevice.pinchClose(selector, percent[, options])
- `selector` <[AndroidSelector]> Selector to pinch close.
- `percent` <[number]> The size of the pinch as a percentage of the widget's size.
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the pinch in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Pinches the widget defined by `selector` in the closing direction.

## androidDevice.pinchOpen(selector, percent[, options])
- `selector` <[AndroidSelector]> Selector to pinch open.
- `percent` <[number]> The size of the pinch as a percentage of the widget's size.
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the pinch in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Pinches the widget defined by `selector` in the open direction.

## androidDevice.press(selector, key[, options])
- `selector` <[AndroidSelector]> Selector to press the key in.
- `key` <[AndroidKey]> The key to press.
- `options` <[Object]>
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Presses the specific `key` in the widget defined by `selector`.

## androidDevice.push(file, path[, options])
- `file` <[string]|[Buffer]> Either a path to the file, or file content.
- `path` <[string]> Path to the file on the device.
- `options` <[Object]>
  - `mode` <[number]> Optional file mode, defaults to `644` (`rw-r--r--`).
- returns: <[Promise]<[void]>>

Copies a file to the device.

## androidDevice.screenshot([options])
- `options` <[Object]>
  - `path` <[string]> The file path to save the image to. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.
- returns: <[Promise]<[Buffer]>>

Returns the buffer with the captured screenshot of the device.

## androidDevice.scroll(selector, direction, percent[, options])
- `selector` <[AndroidSelector]> Selector to scroll.
- `direction` <"down"|"up"|"left"|"right"> Scroll direction.
- `percent` <[number]> Distance to scroll as a percentage of the widget's size.
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the scroll in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Scrolls the widget defined by `selector` in  the specified `direction`.

## androidDevice.serial()
- returns: <[string]>

Device serial number.

## androidDevice.setDefaultTimeout(timeout)
- `timeout` <[number]> Maximum time in milliseconds
- returns: <[void]>

This setting will change the default maximum time for all the methods accepting `timeout` option.

## androidDevice.shell(command)
- `command` <[string]> Shell command to execute.
- returns: <[Promise]<[Buffer]>>

Executes a shell command on the device and returns its output.

## androidDevice.swipe(selector, direction, percent[, options])
- `selector` <[AndroidSelector]> Selector to swipe.
- `direction` <"down"|"up"|"left"|"right"> Swipe direction.
- `percent` <[number]> Distance to swipe as a percentage of the widget's size.
- `options` <[Object]>
  - `speed` <[number]> Optional speed of the swipe in pixels per second.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Swipes the widget defined by `selector` in  the specified `direction`.

## androidDevice.tap(selector[, options])
- `selector` <[AndroidSelector]> Selector to tap on.
- `options` <[Object]>
  - `duration` <[number]> Optional duration of the tap in milliseconds.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Taps on the widget defined by `selector`.

## androidDevice.wait(selector[, options])
- `selector` <[AndroidSelector]> Selector to wait for.
- `options` <[Object]>
  - `state` <"gone"> Optional state. Can be either:
    * default - wait for element to be present.
    * `'gone'` - wait for element to not be present.
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[void]>>

Waits for the specific `selector` to either appear or disappear, depending on the `state`.

## androidDevice.waitForEvent(event[, optionsOrPredicate])
- `event` <[string]> Event name, same one typically passed into `*.on(event)`.
- `optionsOrPredicate` <[function]|[Object]> Either a predicate that receives an event or an options object. Optional.
  - `predicate` <[function]> receives the event data and resolves to truthy value when the waiting should resolve.
  - `timeout` <[number]> maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout).
- returns: <[Promise]<[Object]>>

Waits for event to fire and passes its value into the predicate function. Returns when the predicate returns truthy value.

## androidDevice.webView(selector[, options])
- `selector` <[Object]>
  - `pkg` <[string]> Package identifier.
- `options` <[Object]>
  - `timeout` <[number]> Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#androiddevicesetdefaulttimeouttimeout) method.
- returns: <[Promise]<[AndroidWebView]>>

This method waits until [AndroidWebView] matching the `selector` is opened and returns it. If there is already an open [AndroidWebView] matching the `selector`, returns immediately.

## androidDevice.webViews()
- returns: <[Array]<[AndroidWebView]>>

Currently open WebViews.

## androidDevice.input
- type: <[AndroidInput]>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"