nodejs/versioned_docs/version-1.12/api/class-androiddevice.mdx
---
id: class-androiddevice
title: "AndroidDevice"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[AndroidDevice] represents a connected device, either real hardware or emulated. Devices can be obtained using [android.devices()](./api/class-android.mdx#android-devices).


- [androidDevice.on('webview')](./api/class-androiddevice.mdx#android-device-event-web-view)
- [androidDevice.close()](./api/class-androiddevice.mdx#android-device-close)
- [androidDevice.drag(selector, dest[, options])](./api/class-androiddevice.mdx#android-device-drag)
- [androidDevice.fill(selector, text[, options])](./api/class-androiddevice.mdx#android-device-fill)
- [androidDevice.fling(selector, direction[, options])](./api/class-androiddevice.mdx#android-device-fling)
- [androidDevice.info(selector)](./api/class-androiddevice.mdx#android-device-info)
- [androidDevice.installApk(file[, options])](./api/class-androiddevice.mdx#android-device-install-apk)
- [androidDevice.launchBrowser([options])](./api/class-androiddevice.mdx#android-device-launch-browser)
- [androidDevice.longTap(selector[, options])](./api/class-androiddevice.mdx#android-device-long-tap)
- [androidDevice.model()](./api/class-androiddevice.mdx#android-device-model)
- [androidDevice.open(command)](./api/class-androiddevice.mdx#android-device-open)
- [androidDevice.pinchClose(selector, percent[, options])](./api/class-androiddevice.mdx#android-device-pinch-close)
- [androidDevice.pinchOpen(selector, percent[, options])](./api/class-androiddevice.mdx#android-device-pinch-open)
- [androidDevice.press(selector, key[, options])](./api/class-androiddevice.mdx#android-device-press)
- [androidDevice.push(file, path[, options])](./api/class-androiddevice.mdx#android-device-push)
- [androidDevice.screenshot([options])](./api/class-androiddevice.mdx#android-device-screenshot)
- [androidDevice.scroll(selector, direction, percent[, options])](./api/class-androiddevice.mdx#android-device-scroll)
- [androidDevice.serial()](./api/class-androiddevice.mdx#android-device-serial)
- [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout)
- [androidDevice.shell(command)](./api/class-androiddevice.mdx#android-device-shell)
- [androidDevice.swipe(selector, direction, percent[, options])](./api/class-androiddevice.mdx#android-device-swipe)
- [androidDevice.tap(selector[, options])](./api/class-androiddevice.mdx#android-device-tap)
- [androidDevice.wait(selector[, options])](./api/class-androiddevice.mdx#android-device-wait)
- [androidDevice.waitForEvent(event[, optionsOrPredicate])](./api/class-androiddevice.mdx#android-device-wait-for-event)
- [androidDevice.webView(selector[, options])](./api/class-androiddevice.mdx#android-device-web-view)
- [androidDevice.webViews()](./api/class-androiddevice.mdx#android-device-web-views)
- [androidDevice.input](./api/class-androiddevice.mdx#android-device-input)

## androidDevice.on('webview') {#android-device-event-web-view}
- type: &#60;[AndroidWebView]&#62;

Emitted when a new WebView instance is detected.

## androidDevice.close() {#android-device-close}
- returns: &#60;[Promise]<[void]>&#62;

Disconnects from the device.

## androidDevice.drag(selector, dest[, options]) {#android-device-drag}
- `selector` &#60;[AndroidSelector]&#62; Selector to drag.
- `dest` &#60;[Object]&#62; Point to drag to.
  - `x` &#60;[number]&#62;
  - `y` &#60;[number]&#62;
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the drag in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Drags the widget defined by `selector` towards `dest` point.

## androidDevice.fill(selector, text[, options]) {#android-device-fill}
- `selector` &#60;[AndroidSelector]&#62; Selector to fill.
- `text` &#60;[string]&#62; Text to be filled in the input box.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Fills the specific `selector` input box with `text`.

## androidDevice.fling(selector, direction[, options]) {#android-device-fling}
- `selector` &#60;[AndroidSelector]&#62; Selector to fling.
- `direction` &#60;"down"|"up"|"left"|"right"&#62; Fling direction.
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the fling in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Flings the widget defined by `selector` in  the specified `direction`.

## androidDevice.info(selector) {#android-device-info}
- `selector` &#60;[AndroidSelector]&#62; Selector to return information about.
- returns: &#60;[Promise]<[AndroidElementInfo]>&#62;

Returns information about a widget defined by `selector`.

## androidDevice.installApk(file[, options]) {#android-device-install-apk}
- `file` &#60;[string]|[Buffer]&#62; Either a path to the apk file, or apk file content.
- `options` &#60;[Object]&#62;
  - `args` &#60;[Array]<[string]>&#62; Optional arguments to pass to the `shell:cmd package install` call. Defaults to `-r -t -S`.
- returns: &#60;[Promise]<[void]>&#62;

Installs an apk on the device.

## androidDevice.launchBrowser([options]) {#android-device-launch-browser}
- `options` &#60;[Object]&#62;
  - `acceptDownloads` &#60;[boolean]&#62; Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
  - `bypassCSP` &#60;[boolean]&#62; Toggles bypassing page's Content-Security-Policy.
  - `colorScheme` &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.
  - `command` &#60;[string]&#62; Optional package name to launch instead of default Chrome for Android.
  - `deviceScaleFactor` &#60;[number]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.
  - `extraHTTPHeaders` &#60;[Object]<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.
  - `geolocation` &#60;[Object]&#62;
    - `latitude` &#60;[number]&#62; Latitude between -90 and 90.
    - `longitude` &#60;[number]&#62; Longitude between -180 and 180.
    - `accuracy` &#60;[number]&#62; Non-negative accuracy value. Defaults to `0`.
  - `hasTouch` &#60;[boolean]&#62; Specifies if viewport supports touch events. Defaults to false.
  - `httpCredentials` &#60;[Object]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
    - `username` &#60;[string]&#62;
    - `password` &#60;[string]&#62;
  - `ignoreHTTPSErrors` &#60;[boolean]&#62; Whether to ignore HTTPS errors during navigation. Defaults to `false`.
  - `isMobile` &#60;[boolean]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
  - `javaScriptEnabled` &#60;[boolean]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.
  - `locale` &#60;[string]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging.
  - `offline` &#60;[boolean]&#62; Whether to emulate network being offline. Defaults to `false`.
  - `permissions` &#60;[Array]<[string]>&#62; A list of permissions to grant to all pages in this context. See [browserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.
  - `recordHar` &#60;[Object]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into `recordHar.path` file. If not specified, the HAR is not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.
    - `omitContent` &#60;[boolean]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
    - `path` &#60;[string]&#62; Path on the filesystem to write the HAR file to.
  - `recordVideo` &#60;[Object]&#62; Enables video recording for all pages into `recordVideo.dir` directory. If not specified videos are not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.
    - `dir` &#60;[string]&#62; Path to the directory to put videos into.
    - `size` &#60;[Object]&#62; Optional dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
      - `width` &#60;[number]&#62; Video frame width.
      - `height` &#60;[number]&#62; Video frame height.
  - `reducedMotion` &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.
  - `screen` &#60;[Object]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
  - `timezoneId` &#60;[string]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
  - `userAgent` &#60;[string]&#62; Specific user agent to use in this context.
  - `videoSize` &#60;[Object]&#62; **DEPRECATED** Use `recordVideo` instead.
    - `width` &#60;[number]&#62; Video frame width.
    - `height` &#60;[number]&#62; Video frame height.
  - `videosPath` &#60;[string]&#62; **DEPRECATED** Use `recordVideo` instead.
  - `viewport` &#60;[null]|[Object]&#62; Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
- returns: &#60;[Promise]<[BrowserContext]>&#62;

Launches Chrome browser on the device, and returns its persistent context.

## androidDevice.longTap(selector[, options]) {#android-device-long-tap}
- `selector` &#60;[AndroidSelector]&#62; Selector to tap on.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Performs a long tap on the widget defined by `selector`.

## androidDevice.model() {#android-device-model}
- returns: &#60;[string]&#62;

Device model.

## androidDevice.open(command) {#android-device-open}
- `command` &#60;[string]&#62;
- returns: &#60;[Promise]<[AndroidSocket]>&#62;

Launches a process in the shell on the device and returns a socket to communicate with the launched process.

## androidDevice.pinchClose(selector, percent[, options]) {#android-device-pinch-close}
- `selector` &#60;[AndroidSelector]&#62; Selector to pinch close.
- `percent` &#60;[number]&#62; The size of the pinch as a percentage of the widget's size.
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the pinch in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Pinches the widget defined by `selector` in the closing direction.

## androidDevice.pinchOpen(selector, percent[, options]) {#android-device-pinch-open}
- `selector` &#60;[AndroidSelector]&#62; Selector to pinch open.
- `percent` &#60;[number]&#62; The size of the pinch as a percentage of the widget's size.
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the pinch in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Pinches the widget defined by `selector` in the open direction.

## androidDevice.press(selector, key[, options]) {#android-device-press}
- `selector` &#60;[AndroidSelector]&#62; Selector to press the key in.
- `key` &#60;[AndroidKey]&#62; The key to press.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Presses the specific `key` in the widget defined by `selector`.

## androidDevice.push(file, path[, options]) {#android-device-push}
- `file` &#60;[string]|[Buffer]&#62; Either a path to the file, or file content.
- `path` &#60;[string]&#62; Path to the file on the device.
- `options` &#60;[Object]&#62;
  - `mode` &#60;[number]&#62; Optional file mode, defaults to `644` (`rw-r--r--`).
- returns: &#60;[Promise]<[void]>&#62;

Copies a file to the device.

## androidDevice.screenshot([options]) {#android-device-screenshot}
- `options` &#60;[Object]&#62;
  - `path` &#60;[string]&#62; The file path to save the image to. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.
- returns: &#60;[Promise]<[Buffer]>&#62;

Returns the buffer with the captured screenshot of the device.

## androidDevice.scroll(selector, direction, percent[, options]) {#android-device-scroll}
- `selector` &#60;[AndroidSelector]&#62; Selector to scroll.
- `direction` &#60;"down"|"up"|"left"|"right"&#62; Scroll direction.
- `percent` &#60;[number]&#62; Distance to scroll as a percentage of the widget's size.
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the scroll in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Scrolls the widget defined by `selector` in  the specified `direction`.

## androidDevice.serial() {#android-device-serial}
- returns: &#60;[string]&#62;

Device serial number.

## androidDevice.setDefaultTimeout(timeout) {#android-device-set-default-timeout}
- `timeout` &#60;[number]&#62; Maximum time in milliseconds
- returns: &#60;[void]&#62;

This setting will change the default maximum time for all the methods accepting `timeout` option.

## androidDevice.shell(command) {#android-device-shell}
- `command` &#60;[string]&#62; Shell command to execute.
- returns: &#60;[Promise]<[Buffer]>&#62;

Executes a shell command on the device and returns its output.

## androidDevice.swipe(selector, direction, percent[, options]) {#android-device-swipe}
- `selector` &#60;[AndroidSelector]&#62; Selector to swipe.
- `direction` &#60;"down"|"up"|"left"|"right"&#62; Swipe direction.
- `percent` &#60;[number]&#62; Distance to swipe as a percentage of the widget's size.
- `options` &#60;[Object]&#62;
  - `speed` &#60;[number]&#62; Optional speed of the swipe in pixels per second.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Swipes the widget defined by `selector` in  the specified `direction`.

## androidDevice.tap(selector[, options]) {#android-device-tap}
- `selector` &#60;[AndroidSelector]&#62; Selector to tap on.
- `options` &#60;[Object]&#62;
  - `duration` &#60;[number]&#62; Optional duration of the tap in milliseconds.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Taps on the widget defined by `selector`.

## androidDevice.wait(selector[, options]) {#android-device-wait}
- `selector` &#60;[AndroidSelector]&#62; Selector to wait for.
- `options` &#60;[Object]&#62;
  - `state` &#60;"gone"&#62; Optional state. Can be either:
    * default - wait for element to be present.
    * `'gone'` - wait for element to not be present.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[void]>&#62;

Waits for the specific `selector` to either appear or disappear, depending on the `state`.

## androidDevice.waitForEvent(event[, optionsOrPredicate]) {#android-device-wait-for-event}
- `event` &#60;[string]&#62; Event name, same one typically passed into `*.on(event)`.
- `optionsOrPredicate` &#60;[function]|[Object]&#62; Either a predicate that receives an event or an options object. Optional.
  - `predicate` &#60;[function]&#62; receives the event data and resolves to truthy value when the waiting should resolve.
  - `timeout` &#60;[number]&#62; maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout).
- returns: &#60;[Promise]<[Object]>&#62;

Waits for event to fire and passes its value into the predicate function. Returns when the predicate returns truthy value.

## androidDevice.webView(selector[, options]) {#android-device-web-view}
- `selector` &#60;[Object]&#62;
  - `pkg` &#60;[string]&#62; Package identifier.
- `options` &#60;[Object]&#62;
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [androidDevice.setDefaultTimeout(timeout)](./api/class-androiddevice.mdx#android-device-set-default-timeout) method.
- returns: &#60;[Promise]<[AndroidWebView]>&#62;

This method waits until [AndroidWebView] matching the `selector` is opened and returns it. If there is already an open [AndroidWebView] matching the `selector`, returns immediately.

## androidDevice.webViews() {#android-device-web-views}
- returns: &#60;[Array]<[AndroidWebView]>&#62;

Currently open WebViews.

## androidDevice.input {#android-device-input}
- type: &#60;[AndroidInput]&#62;

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"